--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1> My first Web Page</h1>
 <h2>hi<h2>
 <h3>Rachana</h3>
-<p>My name is <b>Rachana Kanagala</b></p>
+<p>My name is <b>Rachana Kanagala</b>. I'am from <i>Visakhapatnam</i></p>
