--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <h2>hi<h2>
 <h3>Rachana</h3>
 <p>My name is <b>Rachana Kanagala</b>. I'am from <i>Visakhapatnam</i></p>
+<p>I'm doing my masters in NJIT
+(<a href="http://www.njit.edu">njit.edu</a>)</p>
